// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`full test 1`] = `
"# Changelog

# 16.0.0-next.5 (2023-03-29)

## Breaking Changes

<!-- CHANGELOG SPLIT MARKER -->

# 16.0.0-next.4 (2023-03-22)

d


<!-- Generated by pkg-name-for-test@vpkg-version-for-test, please do not modify manually!! -->

## 其他版本的更新日志
- [v14.x](changelogs/v14.x-CHANGELOG.md)
- [v10.x](changelogs/v10.x-CHANGELOG.md)
- [v9.x](changelogs/v9.x-CHANGELOG.md)
- [v2.x](changelogs/v2.x-CHANGELOG.md)

"
`;

exports[`splitCurrentChangelog > has-many-versions 1`] = `
"<!-- Generated by pkg-name-for-test@vpkg-version-for-test, please do not modify manually!! -->

# v14.x 更新日志

# 14.2.10 (2022-11-09)
c

<!-- CHANGELOG SPLIT MARKER -->



"
`;

exports[`splitCurrentChangelog > has-many-versions 2`] = `
"# Changelog

# 16.0.0-next.5 (2023-03-29)
## Breaking Changes

<!-- CHANGELOG SPLIT MARKER -->


# 16.0.0-next.4 (2023-03-22)
d
"
`;

exports[`splitCurrentChangelog > has-many-versions 3`] = `
"<!-- Generated by pkg-name-for-test@vpkg-version-for-test, please do not modify manually!! -->

# v2.x 更新日志

## [2.7.14](https://github.com/vuejs/vue/compare/v2.7.13...v2.7.14) (2022-11-09)


### Bug Fixes

a



## [2.7.13](https://github.com/vuejs/vue/compare/v2.7.12...v2.7.13) (2022-10-14)


b



## [2.7.12](https://github.com/vuejs/vue/compare/v2.7.11...v2.7.12) (2022-10-12)



"
`;
